@@ -1,3 +1,5 @@
+- Fix incorrect bridge notification on initial connection. Closes #467096.
+
 1.4.2 - 20150507
 ================
 
